--- a/controllers/CMakeLists.txt
+++ b/controllers/CMakeLists.txt
@@ -1,5 +1,6 @@
 include_directories(${CMAKE_SOURCE_DIR}/controllers)
 
 add_subdirectory(footbot_diffusion)
-add_subdirectory(directional_navigation)
+# add_subdirectory(directional_navigation)
+add_subdirectory(directional_navigation_2)
 
